# saiga

./: .flake8  Makefile  README.md  pyproject.toml  requirements.txt
configs/datasets/: pref_d10.json  pref_d11.json  pref_d12.json  pref_d13.json  pref_d14.json  pref_d15.json  pref_d16.json  pref_d17.json  pref_d18.json  pref_d19.json  pref_d20.json  pref_d21.json  pref_d22.json  pref_d23.json  pref_d24.json  pref_d25.json  pref_d26.json  pref_d27.json  pref_d28.json  pref_d29.json  pref_d30.json  pref_d31.json  pref_d32.json  pref_d33.json  pref_d34.json  pref_d35.json  pref_d36.json  pref_d37.json  pref_d38.json  pref_d39.json  pref_d9.json  sft_d10.json  sft_d11.json  sft_d12.json  sft_d13.json  sft_d14.json  sft_d15.json  sft_d16.json  sft_d17.json  sft_d18.json  (+3 more)
configs/models/: chess_sft_m1.json  chess_sft_m2.json  chess_sft_m3.json  chess_sft_m4.json  doestoevsky_nemo_12b_orpo_m1.json  saiga_aya_23_8b_m1.json  saiga_babel_9b_sft_m1.json  saiga_babel_9b_smpo_m1.json  saiga_gemma2_2b_sft_m1.json  saiga_gemma2_2b_simpo_m1.json  saiga_gemma2_9b_kto_m1.json  saiga_gemma2_9b_kto_m2.json  saiga_gemma2_9b_sft_m3.json  saiga_gemma2_9b_sft_m4.json  saiga_gemma2_9b_simpo_m1.json  saiga_gemma3_12b_sft_m1.json  saiga_gemma3_12b_sft_m2.json  saiga_gemma3_12b_smpo_m1.json  saiga_gemma3_12b_smpo_m2.json  saiga_gemma3_12b_smpo_m3.json  saiga_llama3_8b_dpo_m2.json  saiga_llama3_8b_kto_m1.json  saiga_llama3_8b_kto_m2.json  saiga_llama3_8b_m3.json  saiga_llama3_8b_sft_m11.json  saiga_nemo_12b_kto_m1.json  saiga_nemo_12b_kto_m2.json  saiga_nemo_12b_orpo_m1.json  saiga_nemo_12b_sft_m1.json  saiga_nemo_12b_sft_m10.json  saiga_nemo_12b_sft_m11.json  saiga_nemo_12b_sft_m12.json  saiga_nemo_12b_sft_m2.json  saiga_nemo_12b_sft_m3.json  saiga_nemo_12b_sft_m5.json  saiga_nemo_12b_sft_m6.json  saiga_nemo_12b_sft_m7.json  saiga_nemo_12b_sft_m8.json  saiga_nemo_12b_sft_m9.json  saiga_nemo_12b_simpo_m1.json  (+35 more)
scripts/: abliterate.py  benchmark.py  compose_chess_dataset.py  compose_pref_dataset.py  compose_sft_dataset.py  convert_medusa_to_vllm.py  eagle_generate_data.py  get_pref_prompts.py  interact_gguf.py  merge_lora.py  resave.py  to_gptq.py
scripts/saiga_scored/: annotate_meta.py  anthropic_wrapper.py  detect_language.py  filter_claude.py  merge.py  run_regex.py
src/: dataset.py  dpo_dataset.py  infer_transformers.py  infer_vllm.py  smpo_trainer.py  train_cpo.py  train_dpo.py  train_kto.py  train_medusa.py  train_orpo.py  train_smpo.py  train_transformers.py  train_unsloth.py
src/util/: dl.py
